--- a/playground/css-height/src/scratch.html
+++ b/playground/css-height/src/scratch.html
@@ -21,6 +21,8 @@
     }
 
     .mobile-controller {
+      height: 100%;
+
       display: flex;
       align-items: center;
       flex-direction: column;
